name:                gloss-counter
version:             0.1.0.0
license-file:        LICENSE
author:              Pieter de Marez Oyens, Bram Blaauwendraad
maintainer:          p.m.w.marezoyens@students.uu.nl, bram.blaauwendraad@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       directory,
                       gloss,
                       random,
                       hlint
  hs-source-dirs:      src
  default-language:    Haskell2010